# python_web_hw6_sqllite

./: create_tables.py  db_connection.py  drop_tables.py  hw_6.db  insert_to_table.py  pyproject.toml  query_1.py  query_12.py  query_2.py  query_3.py  query_4.py  query_5.py
